tests/typing/bad/testfile-field4-1.scala
class A { var x: Boolean = true }
class B { var x: Int = 1; def m() { var y: Int = new A().x } }
object Main { def main(args: Array[String]) { } }
